==> davewhiiite/uvc/firmware/uvc_controller/mbed-os/targets/TARGET_ARM_FM/TARGET_FVP_MPS2/serial_api.c <==
#include <math.h>
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include "serial_api.h"
#include "cmsis.h"
#include "pinmap.h"
#include "mbed_error.h"
#include "gpio_api.h"
#define UART_NUM    4

void serial_init(serial_t *obj, PinName tx, PinName rx)
{
    int is_stdio_uart = 0;

    // determine the UART to use
    UARTName uart_tx = (UARTName)pinmap_peripheral(tx, PinMap_UART_TX);
    UARTName uart_rx = (UARTName)pinmap_peripheral(rx, PinMap_UART_RX);
    UARTName uart = (UARTName)pinmap_merge(uart_tx, uart_rx);
    if ((int)uart == NC) {
        error("Serial pinout mapping failed");
    }

    obj->uart = (CMSDK_UART_TypeDef *)uart;
    //set baud rate and enable Uart in normarl mode (RX and TX enabled)
    switch (uart) {
        case UART_0: {
                CMSDK_UART0->CTRL = 0x00;    // Disable UART when changing configuration
                if ((int)uart_tx != NC) {
                    CMSDK_UART0->CTRL |= 0x01;  // TX enable
                } else {
                    CMSDK_UART0->CTRL &= 0xFFFE;  // TX disable
                }


                if ((int)uart_rx != NC) {
                    CMSDK_UART0->CTRL |= 0x02;  // RX enable
                } else {
                    CMSDK_UART0->CTRL &= 0xFFFD;  // RX disable
                }

            }
            break;
        case UART_1: {   //XBEE SOCKET UART
                CMSDK_UART1->CTRL = 0x00;    // Disable UART when changing configuration
                if ((int)tx != NC) {
                    CMSDK_UART1->CTRL = 0x1;   // TX enable
                    CMSDK_GPIO1->ALTFUNCSET |= 0x0100;
                }
                if ((int)rx != NC) {
                    CMSDK_UART1->CTRL |= 0x2;  // RX enable
                    CMSDK_GPIO1->ALTFUNCSET |= 0x0080;
                }
            }
            break;
        case UART_2: {   //Sheild0 UART
                CMSDK_UART3->CTRL = 0x00;    // Disable UART when changing configuration
                if ((int)tx != NC) {
                    CMSDK_UART3->CTRL = 0x1;   // TX enable
                    CMSDK_GPIO0->ALTFUNCSET |= 0x0010;
                }
                if ((int)rx != NC) {
                    CMSDK_UART3->CTRL |= 0x2;  // RX enable
                    CMSDK_GPIO0->ALTFUNCSET |= 0x0001;
                }
            }
            break;
        case UART_3: {   //Sheild1 UART
                CMSDK_UART4->CTRL = 0x00;    // Disable UART when changing configuration
                if ((int)tx != NC) {
                    CMSDK_UART4->CTRL = 0x1;   // TX enable
                    CMSDK_GPIO1->ALTFUNCSET |= 0x4000;
                }
                if ((int)rx != NC) {
                    CMSDK_UART4->CTRL |= 0x2;  // RX enable
                    CMSDK_GPIO1->ALTFUNCSET |= 0x0400;
                }
            }
            break;
    }

    // set default baud rate and format
    serial_baud(obj, 9600);

    // pinout the chosen uart
    pinmap_pinout(tx, PinMap_UART_TX);
    pinmap_pinout(rx, PinMap_UART_RX);

    switch (uart) {
        case UART_0:
            obj->index = 0;
            break;
        case UART_1:
            obj->index = 1;
            break;
        case UART_2:
            obj->index = 2;
            break;
        case UART_3:
            obj->index = 3;
            break;
    }
    uart_data[obj->index].sw_rts.pin = NC;
    uart_data[obj->index].sw_cts.pin = NC;

    is_stdio_uart = (uart == STDIO_UART) ? (1) : (0);

    if (is_stdio_uart) {
        stdio_uart_inited = 1;
        memcpy(&stdio_uart, obj, sizeof(serial_t));
    }
}

void serial_free(serial_t *obj)
{
    uart_data[obj->index].serial_irq_id = 0;
}

void serial_baud(serial_t *obj, int baudrate)
{
    // The MPS2 has a simple divider to control the baud rate. The formula is:
    //
    // Baudrate = PCLK / BAUDDIV
    //
    // PCLK = 25 Mhz
    // so for a desired baud rate of 9600
    //  25000000 / 9600 = 2604
    //
    //check to see if minimum baud value entered
    int baudrate_div = 0;
    baudrate_div = SystemCoreClock / baudrate;
    if (baudrate >= 16) {
        switch ((int)obj->uart) {
            case UART_0:
                CMSDK_UART0->BAUDDIV = baudrate_div;
                break;
            case UART_1:
                CMSDK_UART1->BAUDDIV = baudrate_div;
                break;
            case UART_2:
                CMSDK_UART3->BAUDDIV = baudrate_div;
                break;
            case UART_3:
                CMSDK_UART4->BAUDDIV = baudrate_div;
                break;
            default:
                error("serial_baud");
                break;
        }
    } else {
        error("serial_baud");
    }

}

void serial_irq_handler(serial_t *obj, uart_irq_handler handler, uint32_t id)
{
    irq_handler = handler;
    uart_data[obj->index].serial_irq_id = id;
}

void serial_pinout_tx(PinName tx)
{
    pinmap_pinout(tx, PinMap_UART_TX);
}
